# simsapa-releases-info

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
app/: flask_app.py  flask_app_mysql.py
app/assets/: releases-dev.toml  releases-simsapa-ng.toml  releases.toml
config/: simsapa_eu_pythonanywhere_com_wsgi.py
