[tool.poetry]
name = "simsapa-releases-info"
version = "0.1.0"
description = ""
authors = ["Gambhiro <gambhiro@users.noreply.github.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
# The Python version configured for the app at eu.pythonanywhere.com
python = "^3.10"
flask = "^2.3.3"
tomlkit = "^0.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
