[tool.poetry]
name = "simsapa-releases-info"
version = "0.1.0"
description = ""
authors = ["Gambhiro <gambhiro@users.noreply.github.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
# The Python version configured for the app at eu.pythonanywhere.com
python = "^3.10"
flask = "^2.3.3"
tomlkit = "^0.12.1"
flask-login = "^0.6.2"
python-dotenv = "^1.0.0"

# flask-sqlalchemy = "^3.1.1"
# mysql-connector-python = "^8.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"

[tool.ruff]
ignore = ["E401", "E501", "E712"]
target-version = "py310"
